--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       #recentMessages li { color: rgb(152, 139, 139); }
     </style>
     <script src="/socket"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   </head>
   <body>
     <ul id ="recentMessages"></ul>
